--- a/trunk/web/belgeler/gelistirici/node_17.html
+++ b/trunk/web/belgeler/gelistirici/node_17.html
@@ -1,48 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
-	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
-</head>
-
-<body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
-<!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
-<!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../index.html">Ana Sayfa</a>
-| <a href="../../hakkimizda.html">Hakkımızda</a>
-| <a href="../../projeler/index.html">Projeler</a>
-| <a href="../../belgeler/index.html">Belgeler</a>
-| <a href="../../urunler/index.html">Ürünler</a>
-| <a href="../../sss.html">Sık Sorulanlar</a>
-| <a href="../../iletisim.html">İletişim</a>
-| <a href="../../basin/index.html">Basında Uludağ</a>
-| <a href="../../eng/index.html">English</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head><body>
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_16.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_18.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
@@ -97,7 +55,7 @@ ekleyebilirsiniz.<BR>
 <H4><A NAME="htoc18">4.2.2</A>&nbsp;&nbsp;perl ile parola oluşturmak</H4>
 Bunun için aşağıdaki komutu kullanabilirsiniz.
 <DIV ALIGN=left><DL COMPACT=compact><DT><DD><TT>
-perl&nbsp;-e&nbsp;"print&nbsp;crypt('parolanız','xy'),&#92;"&#92;n&#92;";"</TT><SUP><A NAME="text2" HREF="node_43.html#note2"><TT>2</TT></A></SUP><TT>
+perl&nbsp;-e&nbsp;"print&nbsp;crypt('parolanız','xy'),&#92;"&#92;n&#92;";"</TT><SUP><A NAME="text2" HREF="node_46.html#note2"><TT>2</TT></A></SUP><TT>
 </TT></DL></DIV>
 Komut yalnızca parolanızı oluşturacaktır. E-postanızda kullanmak istediğiniz
 kullanıcı adını da belirtmeniz gerekir.<BR>
@@ -114,27 +72,4 @@ E-postanızda kullanmak istediğiniz kullanıcı adını belirtmeniz gerekir.<BR
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_16.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_18.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
-</table>
-
-</td>
-</tr>
-</table>
-
-</body>
-</html>
+</body></html>
