--- a/trunk/web/belgeler/gelistirici/node_18.html
+++ b/trunk/web/belgeler/gelistirici/node_18.html
@@ -1,48 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
-	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
-</head>
-
-<body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
-<!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
-<!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../index.html">Ana Sayfa</a>
-| <a href="../../hakkimizda.html">Hakkımızda</a>
-| <a href="../../projeler/index.html">Projeler</a>
-| <a href="../../belgeler/index.html">Belgeler</a>
-| <a href="../../urunler/index.html">Ürünler</a>
-| <a href="../../sss.html">Sık Sorulanlar</a>
-| <a href="../../iletisim.html">İletişim</a>
-| <a href="../../basin/index.html">Basında Uludağ</a>
-| <a href="../../eng/index.html">English</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head><body>
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_17.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_19.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
@@ -69,52 +27,7 @@ gözlenebilmekte, herhangi bir zamanki versiyona kolayca dönülebilmektedir.<BR
 Uludağ bünyesinde şu anda kullandığımız iki adet subversion deposu
 bulunuyor.<BR>
 <BR>
-
-<H3><A NAME="htoc21">5.1</A>&nbsp;&nbsp;Uludağ Deposu</H3>
-Uludağ deposu, proje içerisinde geliştirilmekte olan ürünlerin tutulduğu
-depodur. Pardus için geliştirilen tüm yazılımlar Uludağ deposu içerisinde
-tutulur. <BR>
-<BR>
-
-<H3><A NAME="htoc22">5.2</A>&nbsp;&nbsp;Paketler Deposu</H3>
-Paketler deposu https://svn.uludag.org.tr/paketler adresinde hizmet
-vermekte ve Pardus'un ilk sürümüne girecek olan yazılımlar için, kuluçka
-dağıtım kurallarına uygun bir şekilde<SUP><A NAME="text3" HREF="node_43.html#note3">3</A></SUP>, temel bir Portage deposu oluşturmaktadır.<BR>
-<BR>
-Paketler deposu şu an için yalnızca 'Kaynak Temizleme Kılavuzu' belgesinde
-anlatıldığı şekli ile yazılımların dağıtıma girmeden önce çözülmesi
-gereken sorunlarını çözmek için kullanılmaktadır.<BR>
-<BR>
-Paketler deposu Pardus için yeni bir paket yönetim sistemi hazırlanana
-kadar kullanılacak, bundan sonra işlevini bu hali ile yitirecek ve
-büyük bir ihtimal ile yeni bir yapı oluşturulacaktır. Fakat şu anda
-işletim sistemine eklenecek yazılımlara dair yapılan iyileştirmeler
-bu depo kullanılarak yapacaktır.<BR>
-<BR>
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_17.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_19.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<UL><LI><A HREF='./node_19.html'>Uludağ Deposu</A></LI><LI><A HREF='./node_20.html'>Paketler Deposu</A></LI><LI><A HREF='./node_21.html'>Depo dizin sıra düzenleri</A></LI><UL><LI><A HREF='./node_21.html'>trunk/</A></LI><LI><A HREF='./node_21.html'>tags/</A></LI><LI><A HREF='./node_21.html'>repos/</A></LI></UL></UL><table class='navbar'><tbody><tr><td class='navbut'><a href='node_17.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_19.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
-</table>
-
-</td>
-</tr>
-</table>
-
-</body>
-</html>
+</body></html>
