--- a/trunk/web/belgeler/gelistirici/node_21.html
+++ b/trunk/web/belgeler/gelistirici/node_21.html
@@ -1,48 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
-	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
-</head>
-
-<body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
-<!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
-<!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../index.html">Ana Sayfa</a>
-| <a href="../../hakkimizda.html">Hakkımızda</a>
-| <a href="../../projeler/index.html">Projeler</a>
-| <a href="../../belgeler/index.html">Belgeler</a>
-| <a href="../../urunler/index.html">Ürünler</a>
-| <a href="../../sss.html">Sık Sorulanlar</a>
-| <a href="../../iletisim.html">İletişim</a>
-| <a href="../../basin/index.html">Basında Uludağ</a>
-| <a href="../../eng/index.html">English</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head><body>
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_20.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_22.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
@@ -56,36 +14,50 @@ Bu belge yeni bir geliştiricinin Uludağ projesi geliştirme sürecine
 dahil olmak için bilmesi ve yapması gerekenleri tarif etmektedir.<BR>
 <BR>
 
-<H3><A NAME="htoc25">6.2</A>&nbsp;&nbsp;Depo nedir?</H3>
-Depo (repository), herkesin üzerinde çalıştığı yazılım(lar)ın son
-sürümünün, son sürümden önceki tüm sürümlerinin ve sürümler arası
-değişikliklerin kullanıcı, tarih ve sebep bilgileri ile beraber saklandığı
-ve çeşitli yöntemlerle erişilebilen bir disk alanıdır. <BR>
+<H3><A NAME="htoc23">5.3</A>&nbsp;&nbsp;Depo dizin sıra düzenleri</H3>
+Her bir Uludağ subversion deposu aşağıdaki dizin sıra düzenine (hiyerarşi)
+sahiptir.<BR>
+<BR>
+Depo içerisinde üç ana dizin bulunur; trunk, tags ve repos.<BR>
+<BR>
+
+<H4><A NAME="htoc24">5.3.1</A>&nbsp;&nbsp;trunk/</H4>
+Trunk dizini sürekli çalışmanın yapıldığı dizindir.<BR>
+<BR>
+Her proje modülü (belge, web sayfaları, yazılım projeleri, vb.) trunk/
+altında kendi dizinine sahiptir.<BR>
+<BR>
+
+<H4><A NAME="htoc25">5.3.2</A>&nbsp;&nbsp;tags/</H4>
+Tags dizini, her hangi bir modül için, trunk altında yapılan işlerin
+etiketlenerek (taglanarak) kopayalandıkları yerdir. Bu dizin de kendi
+içinde 3 dizin barındırır.
+<UL><LI>
+<B>tags/RELEASE/</B>: Yazılımların (veya modüllerin) kendi sürüm
+numaralarını etiketlemek içiin kullandıkları dizindir. Örneğin, tasma'nın
+0.2 sürümü, tags/RELEASE/tasma-0.2 dizininde etiketlenir.
+<LI><B>tags/BLACKHOLE</B>/: Geliştirilmesi durdurulmuş (üzerinde çalışacak
+bir geliştirici olmadığı için veya artık o projeye ihtiyaç duyulmadığı
+için) projelerin ``atıldığı'' bir kara deliktir. Buradaki projeler
+tekrar kullanılmak istendiğinde trunk/ altına kopyalanarak üzerinde
+çalışılır.
+<LI><B>tags/RESTRUCTURED/</B>: Yazılım (veya modül) tümü ile yeniden
+yapılanmaya girmiş ve eski dosyalar artık kullanılmayacaksa modülün
+atılacağı dizindir. Örneğin, yazılımına 28 Mayıs 2005'de yeniden başlanmış
+``abc'' projesi tags/RESTRUCTURED/abc-2005-05-28/ altına taşınır.
+</UL>
+
+<H4><A NAME="htoc26">5.3.3</A>&nbsp;&nbsp;repos/</H4>
+Repos dizini geliştiricilerin trunk/ altında yapılan çalışmadan farklı,
+deneysel çalışmalarını, aynı modül üzerinde çalışan diğer geliştiricileri
+rahatsız etmeden yürütebilecekleri dizindir. Geliştirici repos/ altına
+kendi dizinini oluşturarak bu dizin içerisinde deneysel çalışmalarını
+yürütebilir.<BR>
+<BR>
+(Yalnızca paketler deposu için geçerli olan bir kural olarak, repos/doc/
+dizini altında bu proje ile ilgili belgeler bulunur.)<BR>
 <BR>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_20.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_22.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
-</table>
-
-</td>
-</tr>
-</table>
-
-</body>
-</html>
+</body></html>
