--- a/trunk/web/belgeler/gelistirici/node_23.html
+++ b/trunk/web/belgeler/gelistirici/node_23.html
@@ -1,48 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
-	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
-</head>
-
-<body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
-<!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
-<!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../index.html">Ana Sayfa</a>
-| <a href="../../hakkimizda.html">Hakkımızda</a>
-| <a href="../../projeler/index.html">Projeler</a>
-| <a href="../../belgeler/index.html">Belgeler</a>
-| <a href="../../urunler/index.html">Ürünler</a>
-| <a href="../../sss.html">Sık Sorulanlar</a>
-| <a href="../../iletisim.html">İletişim</a>
-| <a href="../../basin/index.html">Basında Uludağ</a>
-| <a href="../../eng/index.html">English</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head><body>
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_22.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_24.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
@@ -56,56 +14,48 @@ Bu belge yeni bir geliştiricinin Uludağ projesi geliştirme sürecine
 dahil olmak için bilmesi ve yapması gerekenleri tarif etmektedir.<BR>
 <BR>
 
-<H3><A NAME="htoc27">6.4</A>&nbsp;&nbsp;Depodaki bir dizinin kopyasını nasıl alabilirim?</H3>
-Deponun bir kopyasının oluşturulması esnasında ``<B>svn co</B>''
-komutu kullanılır. Kopya oluştuktan sonra bir daha bu komut kopya
-üzerinde işlem yapılmaz.
+<H3><A NAME="htoc28">6.1</A>&nbsp;&nbsp;Sistemimde subversion olup olmadığını nasıl anlayabilirim?</H3>
+Sisteminizde subversion olup olmadığını en hızlı şekilde ``<B>svn
+--version</B>'' komutunun çıktısına bakarak öğrenebilirsiniz. Şuna benzer
+bir şeyler görmeniz iyiye işarettir:
 <DIV ALIGN=left><DL COMPACT=compact><DT><DD><TT>
-$&nbsp;svn&nbsp;co&nbsp;http://svn.uludag.org.tr/uludag<BR>
+evreniz@jaco:&#126;
+$&nbsp;svn&nbsp;--version<BR>
 <BR>
-A&nbsp;uludag/trunk<BR>
+svn,&nbsp;version&nbsp;1.0.3&nbsp;(r9775)<BR>
 <BR>
-...<BR>
+&nbsp;&nbsp;compiled&nbsp;May&nbsp;19&nbsp;2004,&nbsp;21:28:49<BR>
 <BR>
-...
+Copyright&nbsp;(C)&nbsp;2000-2004&nbsp;CollabNet.<BR>
+<BR>
+Subversion&nbsp;is&nbsp;open&nbsp;source&nbsp;software,&nbsp;see&nbsp;http://subversion.tigris.org/<BR>
+<BR>
+This&nbsp;product&nbsp;includes&nbsp;software&nbsp;developed&nbsp;by&nbsp;CollabNet&nbsp;(http://www.Collab.Net/).<BR>
+<BR>
+The&nbsp;following&nbsp;repository&nbsp;access&nbsp;(RA)&nbsp;modules&nbsp;are&nbsp;available:<BR>
+<BR>
+*&nbsp;ra_dav&nbsp;:&nbsp;Module&nbsp;for&nbsp;accessing&nbsp;a&nbsp;repository&nbsp;via&nbsp;WebDAV&nbsp;(DeltaV)&nbsp;protocol.<BR>
+<BR>
+&nbsp;&nbsp;-&nbsp;handles&nbsp;'http'&nbsp;schema<BR>
+<BR>
+&nbsp;&nbsp;-&nbsp;handles&nbsp;'https'&nbsp;schema<BR>
+<BR>
+*&nbsp;ra_local&nbsp;:&nbsp;Module&nbsp;for&nbsp;accessing&nbsp;a&nbsp;repository&nbsp;on&nbsp;local&nbsp;disk.<BR>
+<BR>
+&nbsp;&nbsp;-&nbsp;handles&nbsp;'file'&nbsp;schema<BR>
+<BR>
+*&nbsp;ra_svn&nbsp;:&nbsp;Module&nbsp;for&nbsp;accessing&nbsp;a&nbsp;repository&nbsp;using&nbsp;the&nbsp;svn&nbsp;network&nbsp;protocol.<BR>
+<BR>
+&nbsp;&nbsp;-&nbsp;handles&nbsp;'svn'&nbsp;schema<BR>
+<BR>
+evreniz@jaco:&#126;
+$&nbsp;
 </TT></DL></DIV>
-Depoya bir URI olarak davranabilirsiniz. Bu şekilde depo içerisindeki
-herhangi bir alt dizini de alabilirsiniz.
-<DIV ALIGN=left><DL COMPACT=compact><DT><DD><TT>
-$&nbsp;svn&nbsp;co&nbsp;http://svn.uludag.org.tr/uludag/trunk/COMAR<BR>
+Eğer yoksa, <A HREF="http://subversion.tigris.org/project_packages.html"><TT>http://subversion.tigris.org/project_packages.html</TT></A>
+adresinden dağıtımınız ya da işletim sisteminiz için hazırlanmış olan
+paketi alarak sisteminize kurabilirsiniz.<BR>
 <BR>
-A&nbsp;COMAR/COMAR-1.sxw<BR>
-<BR>
-A&nbsp;COMAR/CSL<BR>
-<BR>
-...<BR>
-<BR>
-...
-</TT></DL></DIV>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_22.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_24.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
-</table>
-
-</td>
-</tr>
-</table>
-
-</body>
-</html>
+</body></html>
