--- a/trunk/web/belgeler/gelistirici/node_24.html
+++ b/trunk/web/belgeler/gelistirici/node_24.html
@@ -1,48 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
-	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
-</head>
-
-<body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
-<!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
-<!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../index.html">Ana Sayfa</a>
-| <a href="../../hakkimizda.html">Hakkımızda</a>
-| <a href="../../projeler/index.html">Projeler</a>
-| <a href="../../belgeler/index.html">Belgeler</a>
-| <a href="../../urunler/index.html">Ürünler</a>
-| <a href="../../sss.html">Sık Sorulanlar</a>
-| <a href="../../iletisim.html">İletişim</a>
-| <a href="../../basin/index.html">Basında Uludağ</a>
-| <a href="../../eng/index.html">English</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head><body>
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_23.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_25.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
@@ -56,54 +14,13 @@ Bu belge yeni bir geliştiricinin Uludağ projesi geliştirme sürecine
 dahil olmak için bilmesi ve yapması gerekenleri tarif etmektedir.<BR>
 <BR>
 
-<H3><A NAME="htoc28">6.5</A>&nbsp;&nbsp;Bendeki kopyanın güncel olup olmadığını nasıl anlayabilirim?</H3>
-Son değişikliklerden haberdar olmak ve son sürümü takip etmek için
-düzenli olarak deponun sizdeki kopyasını ``<B>svn update</B>''
-komutu yardımı ile güncellemeniz gerekir. Komutu tek başına çağırdığınız
-taktirde bulunduğunuz dizinin içindeki dosyalar ve dizinlerin tamamı
-güncellenir. Ayrıcı komutun sonuna güncellenmesini istediğiniz dizinin
-ya da tek dosyanın adresini ekleyebilirsiniz.
-<DIV ALIGN=left><DL COMPACT=compact><DT><DD><TT>
-&#126;
-/work/uludag/[...]/uludag/trunk&nbsp;$&nbsp;svn&nbsp;update<BR>
+<H3><A NAME="htoc29">6.2</A>&nbsp;&nbsp;Depo nedir?</H3>
+Depo (repository), herkesin üzerinde çalıştığı yazılım(lar)ın son
+sürümünün, son sürümden önceki tüm sürümlerinin ve sürümler arası
+değişikliklerin kullanıcı, tarih ve sebep bilgileri ile beraber saklandığı
+ve çeşitli yöntemlerle erişilebilen bir disk alanıdır. <BR>
 <BR>
-U&nbsp;tasma/modules/tasmanet/device.cpp&nbsp;<BR>
-<BR>
-U&nbsp;tasma/modules/tasmanet/devicesettings.cpp&nbsp;<BR>
-<BR>
-U&nbsp;tasma/modules/tasmanet/device.h&nbsp;<BR>
-<BR>
-U&nbsp;tasma/modules/tasmanet/devicesettings.h&nbsp;<BR>
-<BR>
-Updated&nbsp;to&nbsp;revision&nbsp;158.<BR>
-<BR>
-&#126;
-/work/uludag/[...]/uludag/trunk&nbsp;$
-</TT></DL></DIV>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_23.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_25.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
-</table>
-
-</td>
-</tr>
-</table>
-
-</body>
-</html>
+</body></html>
