--- a/trunk/web/belgeler/gelistirici/node_25.html
+++ b/trunk/web/belgeler/gelistirici/node_25.html
@@ -1,48 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
-	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
-</head>
-
-<body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
-<!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
-<!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../index.html">Ana Sayfa</a>
-| <a href="../../hakkimizda.html">Hakkımızda</a>
-| <a href="../../projeler/index.html">Projeler</a>
-| <a href="../../belgeler/index.html">Belgeler</a>
-| <a href="../../urunler/index.html">Ürünler</a>
-| <a href="../../sss.html">Sık Sorulanlar</a>
-| <a href="../../iletisim.html">İletişim</a>
-| <a href="../../basin/index.html">Basında Uludağ</a>
-| <a href="../../eng/index.html">English</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head><body>
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_24.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_26.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
@@ -56,47 +14,62 @@ Bu belge yeni bir geliştiricinin Uludağ projesi geliştirme sürecine
 dahil olmak için bilmesi ve yapması gerekenleri tarif etmektedir.<BR>
 <BR>
 
-<H3><A NAME="htoc29">6.6</A>&nbsp;&nbsp;Dosyaların yanlarındaki işaretler ne anlama geliyor?</H3>
-SVN ile çalışırken, güncelleme, sorgulama gibi işlemler esnasında
-dosyaların yanında bir önceki örnekte de olduğu gibi kendinden sonraki
-dosya ile ilgili ne gibi bir değişiklik olduğunu size haber vermek
-içindirler.<BR>
+<H3><A NAME="htoc30">6.3</A>&nbsp;&nbsp;Depoda hangi dizinlerin olduğunu nasıl görebilirim?</H3>
+Sizin de belirttiğiniz gibi, bir depo, içerisinde birden fazla dizin
+içerebilir. Deponun hiyerarşisi, diskimiz üzerindeki bir dizinin içi
+gibidir. Böylece deponun tamamını diskinize almadan gezip, sadece
+üzerinde çalışmak ya da göz atmak istediğiniz kısmın kopyasını diskinize
+alabilirsiniz. Depo içerisindeki dizinler ve dosyaların listesini
+``<B>svn ls depo_adresi</B>'' formatı ile görüntülüyoruz:
+<DIV ALIGN=left><DL COMPACT=compact><DT><DD><TT>
+$&nbsp;svn&nbsp;ls&nbsp;http://svn.uludag.org.tr/uludag<BR>
 <BR>
-Dosyaların yanında <B>U</B>, <B>D</B>, <B>A</B>, <B>C</B>
-ya da <B>G</B> harflerinden birisini görebilirsiniz: 
-<UL><LI>
-<B>A</B> Eklenmiş.
-<LI><B>D</B> Silinmiş
-<LI><B>U</B> Güncellenmiş
-<LI><B>G</B> Birleşmiş (depodan aldığınız son güncelleme sizin yerel
-değişiklik yaptığınız bir dosya ile birleştirilmiş)
-<LI><B>C</B> Çakışmış (depodan aldığınız son güncelleme sizin yerel
-yaptığınız değişiklikler ile çakışmış)
-</UL>
+repos/<BR>
+<BR>
+tags/<BR>
+<BR>
+trunk/&nbsp;<BR>
+$&nbsp;svn&nbsp;ls&nbsp;http://svn.uludag.org.tr/uludag/trunk<BR>
+<BR>
+COMAR/<BR>
+<BR>
+comar_prototip_old/<BR>
+<BR>
+web/&nbsp;<BR>
+$&nbsp;svn&nbsp;ls&nbsp;http://svn.uludag.org.tr/uludag/trunk/COMAR<BR>
+<BR>
+COMAR-1.sxw<BR>
+<BR>
+COMARd/<BR>
+<BR>
+CSL/<BR>
+<BR>
+OM/<BR>
+<BR>
+SlicerAPI/<BR>
+<BR>
+confparser/&nbsp;<BR>
+$&nbsp;svn&nbsp;ls&nbsp;http://svn.uludag.org.tr/uludag/trunk/COMAR/confparser<BR>
+<BR>
+GenericParser.py<BR>
+<BR>
+README<BR>
+<BR>
+branchedParser.py<BR>
+<BR>
+comar_configparser.png<BR>
+<BR>
+config_files/<BR>
+<BR>
+confparser.py<BR>
+<BR>
+flatParser.py<BR>
+<BR>
+sectionedParser.py<BR>
+<BR>
+$&nbsp;
+</TT></DL></DIV>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_24.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_26.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
-</table>
-
-</td>
-</tr>
-</table>
-
-</body>
-</html>
+</body></html>
