--- a/trunk/web/belgeler/gelistirici/node_29.html
+++ b/trunk/web/belgeler/gelistirici/node_29.html
@@ -1,48 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="../../stil.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" type="image/x-icon" href="../../images/favicon.ico">
-	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
-</head>
-
-<body class="arka">
-<table class="arkayan" width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="878" align="center" valign="top">
-<table class="arkadalga" width="700" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="800" valign="top">
-
-<!-- logo -->
-<table width="700" border="0" align="center" cellpadding="0" cellspacing="0">
-<tr>
-<td width="620" height="60">
-<img src="../../images/header3.png" alt="Ulusal Dağıtım Projesi" width="700" height="60">
-</td>
-</tr>
-
-<!-- menüler -->
-<tr>
-<td width="680" height="19" valign="top" bgcolor="#B9D0B3">
-<p class="menubar">
-<a href="../../index.html">Ana Sayfa</a>
-| <a href="../../hakkimizda.html">Hakkımızda</a>
-| <a href="../../projeler/index.html">Projeler</a>
-| <a href="../../belgeler/index.html">Belgeler</a>
-| <a href="../../urunler/index.html">Ürünler</a>
-| <a href="../../sss.html">Sık Sorulanlar</a>
-| <a href="../../iletisim.html">İletişim</a>
-| <a href="../../basin/index.html">Basında Uludağ</a>
-| <a href="../../eng/index.html">English</a>
-</p>
-</tr>
-</table>
-
-<br>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head><body>
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_28.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_30.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
@@ -56,59 +14,66 @@ Bu belge yeni bir geliştiricinin Uludağ projesi geliştirme sürecine
 dahil olmak için bilmesi ve yapması gerekenleri tarif etmektedir.<BR>
 <BR>
 
-<H3><A NAME="htoc33">6.10</A>&nbsp;&nbsp;Değiştirdiğim dosyaları göndermek istiyorum?</H3>
-Değiştirdiğiniz dosyaların son hallerinden eminseniz, depoya değişikliklerinizin
-yansıması için ``<B>svn commit</B>'' komutunu kullanabilirsiniz.
-Bu komut ile, -diğer tüm komutlarda olduğu gibi- bir tek dosyayı,
-bir tek dizin ve altındakileri ya da yaptığınız tüm değişiklikleri
-depoya gönderebilirsiniz. svn commit dediğinizde, svn size neyi neden
-değiştirdiğinizi başkalarının da görebilmesi ve depoda geriye dönük
-izlemelerde görüntülenmek üzere loglanması için yaptığınız değişikliklerin
-içerisinde yazdığı bir dosyayı favori metin editörünüzde açar. Favori
-metin editörü olarak açtığı metin editörünü değiştirmek için svn'in
-kullandığı SVN_EDITOR isimli ortam değişkeninden faydalanabilirsiniz:
+<H3><A NAME="htoc34">6.7</A>&nbsp;&nbsp;Bir takım dosyayı değiştirdim, şimdi ne yapacağım?</H3>
+Kendi kopyanızda ne gibi değişiklikler yaptığınızı görmek istediğinizde
+``<B>svn status</B>'' komutunu kullanabilirsiniz. Diğer tüm
+komutlar gibi bu da sonuna ekleyeceğiniz bir URI ile çalışabilir.
+Aşağıda deponun son güncel kopyasına bir dosya eklendiği, bir dosya
+silindiği, iki dosyanın da değiştirilmiş olduğu görünüyor:
 <DIV ALIGN=left><DL COMPACT=compact><DT><DD><TT>
 &#126;
-/work/[...]/COMARd/csl/sample&nbsp;$&nbsp;SVN_EDITOR="vi"&nbsp;svn&nbsp;commit&nbsp;<BR>
+/work/[...]/trunk/COMAR/comar&nbsp;$&nbsp;svn&nbsp;status<BR>
+<BR>
+A&nbsp;COMARd/csl/degisiklik<BR>
+<BR>
+D&nbsp;COMARd/csl/loader.py&nbsp;<BR>
+<BR>
+M&nbsp;COMARd/COMARValue.py<BR>
+<BR>
+M&nbsp;comar-call/rpc.c<BR>
 <BR>
 &#126;
-/work/[...]/COMARd/csl/sample&nbsp;$&nbsp;SVN_EDITOR="mcedit"&nbsp;svn&nbsp;commit<BR>
+/work/[...]/trunk/COMAR/comar&nbsp;$&nbsp;svn&nbsp;status&nbsp;COMARd/csl/COMARValue.py<BR>
+<BR>
+M&nbsp;COMARd/COMARValue.py<BR>
 <BR>
 &#126;
-/work/[...]/COMARd/csl/sample&nbsp;$&nbsp;SVN_EDITOR="kwrite"&nbsp;svn&nbsp;commit<BR>
-<BR>
-.<BR>
-<BR>
-.
+/work/[...]/trunk/COMAR/comar&nbsp;$
 </TT></DL></DIV>
-Metin editörüne değişiklikleri yazıp, yazdıklarınızı kaydedip editörü
-kapattığınız anda svn yerel kopyanızdaki değişiklikleri depoya göndermeye
-başlar.<BR>
+Ayrıca değiştirdiğiniz dosyalarda neyi değiştirdiğinizi de ``<B>svn
+diff</B>'' komutu ile öğrenebilirsiniz:
+<DIV ALIGN=left><DL COMPACT=compact><DT><DD><TT>
+&#126;
+/work/[...]/trunk/COMAR/comar&nbsp;$&nbsp;svn&nbsp;diff&nbsp;comar-call/rpc.c<BR>
 <BR>
+Index:&nbsp;comar-call/rpc.c<BR>
+<BR>
+===================================================================<BR>
+<BR>
+---&nbsp;comar-call/rpc.c&nbsp;(revision&nbsp;158)&nbsp;<BR>
+<BR>
++++&nbsp;comar-call/rpc.c&nbsp;(working&nbsp;copy)&nbsp;<BR>
+<BR>
+@@&nbsp;-146,6&nbsp;+146,7&nbsp;@@&nbsp;<BR>
+<BR>
+&nbsp;&nbsp;if&nbsp;(len&nbsp;==&nbsp;0)&nbsp;break;&nbsp;<BR>
+<BR>
+&nbsp;&nbsp;if&nbsp;(len&nbsp;==&nbsp;-1)&nbsp;{&nbsp;<BR>
+<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;puts("baglanti&nbsp;erken&nbsp;kesildi");&nbsp;<BR>
+<BR>
++&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//bambaska&nbsp;bir&nbsp;degisiklik&nbsp;<BR>
+<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;&nbsp;<BR>
+<BR>
+&nbsp;&nbsp;}&nbsp;<BR>
+<BR>
+&nbsp;&nbsp;printf("RECV[%s]&#92;n&#92;n",&nbsp;buf);&nbsp;<BR>
+<BR>
+&#126;
+/work/[...]/trunk/COMAR/comar&nbsp;$&nbsp;
+</TT></DL></DIV>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_28.html'><img src='../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_30.html'><img src='../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
-
-<!-- yayın hakkı -->
-<br>
-<br>
-<p class="not">
-Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
-kaynak gösterilmek koşulu ile kullanılması serbesttir.
-<em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
-Bilgi ve önerileriniz için
-<a href="mailto:bilgi%20at%20uludag.org.tr">bilgi at uludag.org.tr</a>
-</p>
-<br>
-
-</td>
-</tr>
-</table>
-
-</td>
-</tr>
-</table>
-
-</body>
-</html>
+</body></html>
